--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
                                 <br>
                                 <div class="row align-items-center justify-content-center position-relative">
                                     <div class="col-lg-3 text-center">
-                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Cheesecake</label><br>
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Cheesecake <br> $100 MXN</label><br>
                                     </div>
                                     <div class="col-lg-3 text-center">
-                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Tres Leches</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Tres Leches <br> $120 MXN</label><br>
                                     </div>
                                     <div class="col-lg-3 text-center">
-                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Pan Normal</label><br>
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Pan Normal <br> $70 MXN</label><br>
                                     </div>
                                 </div>
                                 <br>
@@ -211,16 +211,16 @@
                                 <br>
                                 <div class="row align-items-center justify-content-center position-relative">
                                     <div class="col-lg-3 text-center">
-                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Vainilla</label><br>
-                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Chocolate</label><br>
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Vainilla <br> $35 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Chocolate <br> $35 MXN</label><br>
                                     </div>
                                     <div class="col-lg-3 text-center">
-                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Fresa</label><br>
-                                        <label><input type="checkbox" id="cbox4" value="pastel4"> Zarzamora</label><br>
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Fresa <br> $35 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox4" value="pastel4"> Zarzamora <br> $40 MXN</label><br>
                                     </div>
                                     <div class="col-lg-3 text-center">
-                                        <label><input type="checkbox" id="cbox5" value="pastel5"> Frambuesa</label><br>
-                                        <label><input type="checkbox" id="cbox6" value="pastel6"> Oreo </label><br>
+                                        <label><input type="checkbox" id="cbox5" value="pastel5"> Frambuesa <br> $40 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox6" value="pastel6"> Oreo <br> $50 MXN</label><br>
                                     </div>
                                 </div>
                                 <br>
@@ -228,9 +228,9 @@
                                 <br>
                                 <div class="row align-items-center justify-content-center position-relative">
                                     <div class="col-lg-9 text-center">
-                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Chispas de colores</label><br>
-                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Nuez </label><br>
-                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Mix chocolates </label><br>
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Chispas de colores <br> $20 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Nuez <br> $30 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Mix chocolates <br> $50 MXN </label><br>
                                     </div>
                                 </div>
                                 <br>
@@ -238,15 +238,15 @@
                                 <br>
                                 <div class="row align-items-center justify-content-center position-relative">
                                     <div class="col-lg-9 text-center">
-                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Vela normal</label><br>
-                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Vela bengala</label><br>
-                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Tarjeta de felocitación</label><br>
+                                        <label><input type="checkbox" id="cbox1" value="pastel1"> Vela normal $40 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox2" value="pastel2"> Vela bengala $70 MXN</label><br>
+                                        <label><input type="checkbox" id="cbox3" value="pastel3"> Tarjeta de felicitación $30 MXN</label><br>
                                     </div>
                                 </div>
                             </div>
                             <br>
                             <div class="form-btn text-center">
-                                <button type="button" class="btn btn-light">Enviar</button>
+                                <button type="button" class="btn btn-info">Enviar</button>
                             </div>
                             <br>
                         </form>
